rollback more changes to core and implement in ksp layer