@@ -635,7 +635,7 @@ public abstract class AbstractAnnotationMetadataBuilder<T, A> {
             processAnnotationDefaults(originatingElement,
                 metadata,
                 annotationName,
-                () ->  readAnnotationDefaultValues(annotationMirror));
+                () -> readAnnotationDefaultValues(annotationMirror));
         }
 
         List<String> parentAnnotations = new ArrayList<>();
@@ -658,11 +658,9 @@ public abstract class AbstractAnnotationMetadataBuilder<T, A> {
                 if (hasAnnotations(member)) {
                     final DefaultAnnotationMetadata memberMetadata = new DefaultAnnotationMetadata();
                     final List<? extends A> annotationsForMember = getAnnotationsForType(member)
-                        .stream().filter(a -> !getAnnotationTypeName(a).equals(annotationName))
-                        .toList();
-                    if (!annotationsForMember.isEmpty()) {
-                        includeAnnotations(memberMetadata, member, false, true, annotationsForMember, false);
-                    }
+                        .stream().filter((a) -> !getAnnotationTypeName(a).equals(annotationName))
+                        .collect(Collectors.toList());
+                    includeAnnotations(memberMetadata, member, false, true, annotationsForMember, false);
 
                     boolean isInstantiatedMember = memberMetadata.hasAnnotation(InstantiatedMember.class);
 
